# worldcup2026-model

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  coverage.json  data_card.md  docker-compose.yml  limitations.md  model_card.md  pyproject.toml
data/: clv_weight_search_results.csv
deploy/: DEPLOY_WHEN_SSH_READY.md  bdl-webhook.php  nginx-sportsodds.conf  server_setup.sh  wc2026-daily.service  wc2026-daily.timer  wc2026-live-snapshot.cron  wc2026-live.service
docs/: live-pitch.html  live-pmf.html  pmf-distributions.html  pre-match.html
pi-ratings/: README.md  calibrate.py  calibration_log.csv  calibration_state.json  pi_model.py  predict_matches.py  predictions_2026-06-19.json  predictions_2026-06-20.json  predictions_2026-06-21.json  predictions_2026-06-22.json  predictions_2026-06-23.json  predictions_2026-06-24.json  predictions_2026-06-25.json  predictions_2026-06-26.json  predictions_2026-06-27.json  predictions_2026-06-28.json  predictions_2026-06-29.json  predictions_2026-06-30.json  predictions_2026-07-01.json  predictions_2026-07-02.json  predictions_2026-07-03.json  predictions_2026-07-04.json  predictions_2026-07-05.json  predictions_2026-07-06.json  predictions_2026-07-07.json  predictions_2026-07-08.json  predictions_2026-07-09.json  predictions_2026-07-10.json  predictions_2026-07-11.json  predictions_2026-07-12.json  predictions_2026-07-13.json  predictions_2026-07-14.json  predictions_2026-07-15.json  predictions_2026-07-16.json  predictions_2026-07-17.json  predictions_2026-07-18.json  predictions_2026-07-19.json  predictions_2026-07-20.json  predictions_2026-07-21.json  predictions_2026-07-22.json  (+44 more)
reports/: IMPLEMENTATION_SUMMARY.md  PROMOTION_STATUS.md  bdl_endpoint_coverage.md  champion_selection.md  composite_rating_methodology.md  core_grid_slsqp_methodology.md  core_grid_slsqp_validation.md  correct_score_reconciliation_audit.md  daily_prediction_schema.md  data_quality_report.md  equal_prob_baseline_audit.md  group_advancement.md  joint_pmf_validation.md  june11_analysis.md  live_replay_validation.md  market_calibration.md  matchday_2026-06-12.md  matchday_2026-07-14.md  model_benchmark_table.md  penaltyblog_api_surface.md  penaltyblog_gap_audit.md  penaltyblog_resource_usage.md  production_readiness.md  reconciliation_method_comparison.md  schedule_validation.md  score_pmf_calibration.md  team_prior_table.md  walkforward_backtest.md  winner_probabilities.md
(+246 files in other folders)
