[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wc2026"
version = "0.1.0"
description = "Elite-calibrated 2026 FIFA World Cup predictive model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "penaltyblog>=0.9.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "requests>=2.32",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
    "click>=8.1",
    "rich>=13.7",
    "emcee>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[project.scripts]
wc2026 = "wc2026.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
