[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wc2026"
version = "0.2.0"
description = "2026 FIFA World Cup calibrated exact-score PMF prediction engine"
requires-python = ">=3.10"
dependencies = [
    "penaltyblog==1.11.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "pyarrow>=12.0",
    "scipy>=1.10",
    "pydantic>=2.0",
    "click>=8.1",
    "requests>=2.31",
    "requests-cache>=1.1",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "orjson>=3.9",
    "structlog>=23.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "types-requests",
    "types-python-dateutil",
    "pandas-stubs",
]

[project.scripts]
wc2026 = "wc2026.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wc2026"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=wc2026 --cov-report=term-missing --cov-fail-under=40"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["wc2026"]
omit = ["tests/*"]
